[package]
name = "alloy"
version = "0.1.0"
authors = ["Atahan Yorgancı <atahanyorganci@hotmail.com>"]
edition = "2018"

[dependencies]
nom = "7.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
structopt = "0.3.25"
rustyline = "9.1.2"
thiserror = "1.0.30"
phf = { version = "0.10", features = ["macros"] }
alloy_macros = { path = "./alloy-macros" }

[workspace]
members = [".", "alloy-macros"]
