[package]
name = "alloy_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/test.rs"

[dev-dependencies]
trybuild = { version = "1.0.45", features = ["diff"] }
alloy = { path = ".." }

[dependencies]
syn = { version = "1.0.85", features = [ "full", "extra-traits"] }
quote = "1.0.14"
proc-macro2 = "1.0.36"
